修改s4-5的Makefile，把生成的ko直接拷贝到~/tftpboot,可以直接供开发板下载

--- a/up/5/Makefile
+++ b/up/5/Makefile
@@ -2,5 +2,6 @@ obj-m := helloworld.o add.o
 KDIR := ${kernel}
 all:
 	make -C $(KDIR) M=$(PWD) modules
+	cp helloworld.ko add.ko ~/tftpboot/
 clean:
 	rm -fr *.o *.ko *.order *.symvers *.mod.c .*.cmd .tmp*	
